# src/models/user.model.ts
@@ -3,17 +3,61 @@ import { encrypt } from "../utils/encryption";
 import { renderMailHtml, sendMail } from "../utils/mails/mail";
 import { CLIENT_HOST, EMAIL_SMTP_USER } from "../utils/env";
 import { ROLES } from "../utils/constant";
+import * as Yup from "yup";
+
+const validatedPassword = Yup.string()
+  .required()
+  .min(6, "Password must be at least 6 characters")
+  .test(
+    "at-least-one-uppercase-letter",
+    "Contains at least one uppercase letter",
+    (value) => {
+      if (!value) return false;
+      const regex = /^(?=.*[A-Z])/;
+      return regex.test(value);
+    }
+  )
+  .test(
+    "at-least-one-uppercase-number",
+    "Contains at least one uppercase number",
+    (value) => {
+      if (!value) return false;
+      const regex = /^(?=.*\d)/;
+      return regex.test(value);
+    }
+  );
+const validatedConfirmPassword = Yup.string()
+  .required()
+  .oneOf([Yup.ref("password"), ""], "Password must be match");
 
 export const USER_MODEL_NAME = "User";
-export interface User {
-  fullName: string;
-  username: string;
-  email: string;
-  password: string;
-  role: string;
-  profilePicture: string;
+
+export const userLoginDTO = Yup.object({
+  identifier: Yup.string().required(),
+  password: validatedPassword,
+});
+
+export const userUpdatePasswordDTO = Yup.object({
+  oldPassword: validatedPassword,
+  password: validatedPassword,
+  confirmPassword: validatedConfirmPassword,
+});
+
+export const userDTO = Yup.object({
+  fullName: Yup.string().required(),
+  username: Yup.string().required(),
+  email: Yup.string().email().required(),
+  password: validatedPassword,
+  confirmPassword: validatedConfirmPassword,
+});
+
+export type TypeUser = Yup.InferType<typeof userDTO>;
+
+export interface User extends Omit<TypeUser, "confirmPassword"> {
   isActive: boolean;
   activationCode: string;
+  role: string;
+  profilePicture: string;
   createdAt?: string;
 }
 
